fix deployment vs development bug

--- a/astro/src/pages/works.astro
+++ b/astro/src/pages/works.astro
@@ -24,82 +24,82 @@ const seo = {
 <Layout seo={seo}>
 	<div class="menu">
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#AAPI">AAPI Month by Lee Chalomtiarana</a
 		>
 		<a
-			class="menuItem flex sm:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex sm:text-2xl justify-center font-white mx-auto"
 			href="#quiet">the quiet by Audrey Tang</a
 		>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#luca">Self Portrait by Luca Raffa</a
 		>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#luca1">Antonio Ometeotl by Luca Raffa</a
 		>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#luca2">Benjamin Canizares by Luca Raffa</a
 		>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#luca3">Leonardo Vargas by Luca Raffa</a
 		>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#luca4">Therese Ejiofor by Luca Raffa</a
 		>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#art"
 		>
 			The Art of Language by Mahika Varma
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#testament"
 		>
 			testament by Meagan Tam
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#whiteman1"
 		>
 			The Daily Allowance Of White Men by Lee Chaloemtiarana
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#whiteman2"
 			>the mysterious case of the white man by Lee Chaloemtiarana
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#ema"
 		>
 			Glazed by Ema Edwards
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#anonymous"
 		>
 			Dear Diary (anonymous)
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#protests"
 		>
 			premature protests by Lee Chaloemtiarana
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#crane"
 		>
 			Red-crowned crane by Audrey Tang
 		</a>
 		<a
-			class="menuItem flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
+			class="menuItem mt-2 hover:underline flex text-lg sm:text-xl md:text-2xl justify-center font-white mx-auto"
 			href="#cantoneese"
 		>
 			Cantoneese by Audrey Tang</a
@@ -170,15 +170,12 @@ const seo = {
 	</script>
 
 	<style>
-		* {
+		/* * {
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
-		}
+		} */
 
-		.menuItem:hover {
-			text-decoration: underline;
-		}
 
 		.hamburger {
 			z-index: 100;
@@ -186,10 +183,6 @@ const seo = {
 
 		.closeIcon {
 			display: none;
-		}
-
-		.menuItem {
-			margin-top: 0.5rem;
 		}
 
 		.menu {
